# graphics-geometry-research

./: .gitignore  .rtkignore  Application.cpp  Application.h  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SceneObject.cpp  SceneObject.h  Utilities.h  compile_commands.json  main.cpp  main_forTest.cpp
Feature/: BlinnPhongFeature.cpp  BucketedHash.cpp  BucketedHash.h  ComputeTest.cpp  ComputeTest.h  IFeature.h  RecoveredPointCloud.cpp  RecoveredPointCloud.h  TSDF.cpp  TSDF.h  TriangleFeature.cpp  VoxelHash.cpp  VoxelHash.h
Feature/Acquisition/: SimpleLiDAR.cpp  SimpleLiDAR.h
Feature/Common/: Buffer.cpp  Buffer.h  ComputeShader.cpp  RenderingShader.cpp  RenderingShader.h
Feature/DataStructure/GaussianSplatting/: GaussianSplatting.cpp  GaussianSplatting.h
Feature/DataStructure/VoxelHash/: BucketVoxelHash.cpp  BucketVoxelHash.h  BucketVoxelHashFeature.h  BucketVoxelHashRender.cpp  VoxelHash.h  VoxelHashBase.h  VoxelHashPipelines.cpp  VoxelHashSynth.cpp  VoxelHashTypes.h
Feature/SLAM/FastLIO2/: FastLIO2.cpp  FastLIO2.h  FastLIO2Feature.h
Feature/SLAM/KissICP/: KissICP.cpp  KissICP.h  KissICPFeature.h
Feature/SLAM/Viewer/: Viewer.cpp  Viewer.h  ViewerFeature.h
Feature/Samples/: BlinnPhongFeature.h  ComputeTest.cpp  TriangleFeature.h
Feature/VoxelHash/: BucketVoxelHash.cpp  BucketVoxelHash.h  BucketVoxelHashFeature.h  Buffer.cpp  Buffer.h  ComputeShader.cpp  ComputeShader.h  RenderingShader.cpp  RenderingShader.h  VoxelHash.cpp  VoxelHashBuffers.cpp  VoxelHashDispatch.cpp  VoxelHashImGui.cpp  VoxelHashSort.cpp
Problem/: 1_MakeTriangle.h  1_MakeTriangle_Solv.h  2_UsingIndexBuffer.h  2_UsingIndexBufferSolv.h  3_RotateTriangleSolv.h  4_MakeCubeSolv.h  ApplicationForTest.cpp  ApplicationForTest.h
ProblemArchive/: 2_UsingIndexBuffer.h  3_RotateTriangle.h  4_MakeCube.h
algorithms/: angle_speed.py  jacobian_exp_test.py
docs/: VoxelHash.md
shaders/: blinnphong.frag  blinnphong.vert  compute_wave.comp  cube_wave.frag  cube_wave.vert  triangle.vert  tsdf_voxel.vert  vh_clear.comp  vh_count.comp  vh_finalize.comp  vh_gather.comp  vh_histogram.comp  vh_prefix_scan.comp  vh_ptrender.vert  vh_render.frag  vh_render.vert  vh_scatter.comp
shaders/VoxelHash/: VoxelHash_CheckOccupiedVoxel.comp  VoxelHash_Clear.comp  VoxelHash_DeleteBox.comp  VoxelHash_ReallocatePoint.comp  VoxelHash_RenderPoint.frag  VoxelHash_RenderPoint.vert  VoxelHash_RenderPointBySample.vert  VoxelHash_RenderSlot.vert  VoxelHash_RenderTSDFPoint.vert  VoxelHash_UpdateBucket.comp  VoxelHash_UpdateHashTable.comp  VoxelHash_UpdateHistogram.comp  VoxelHash_UpdateTSDF.comp
